ADD: 增加修改个人信息的接口，access日志增加截断
